--- a/awesome_stippling_art_sketches.html
+++ b/awesome_stippling_art_sketches.html
@@ -96,7 +96,7 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
 
-                <p class="lead"> Stippling techniques is a very contemporary style of drawing with dabbing and dots. Pen or brush of a single color is utilized and the ink’s density is depended on the style one wants to depict. This is similar to—but distinct from—<a href="https://en.wikipedia.org/wiki/Pointillism" target="_blank" rel="noopener">pointillism</a>, which uses dots of different colours to simulate blended colours</p>
+                <p class="lead"> Stippling technique is a very contemporary style of drawing with dabbing and dots. Pen or brush of a single color is utilized and the ink’s density is depended on the style one wants to depict. This is similar to—but distinct from—<a href="https://en.wikipedia.org/wiki/Pointillism" target="_blank" rel="noopener">pointillism</a>, which uses dots of different colours to simulate blended colours</p>
 
 
               <div class="responsive">
@@ -111,7 +111,7 @@
                 </div>
               </div>
 
-                <p>These are some amazing stippling art sketches by french artist, <a href="https://www.shanehello.com" target="_blank" rel="noopener">Hello Shane</a> who is an illustrator, hand-letter and graffiti artist. <br>
+                <p>These are some amazing stippling art sketches by French artist, <a href="https://www.shanehello.com" target="_blank" rel="noopener">Hello Shane</a> who is an illustrator, hand-letter and graffiti artist. <br>
                   Building up shading in a complex piece using hundreds of tiny ink dots is a difficult technique that requires time and patience. It is also important to be able to constantly zoom in an out, to see the image on a minuscule scale, along with the full picture. </p>
 
                   <div class="responsive">
@@ -125,9 +125,9 @@
                     <img src="images\shane_sketches\6.png" alt="Sketch by Hello Shane 6" class="lazyload">
                     </div>
                   </div>
-              <p>Though it may not be clear from the images, Shane primarily draws in the traditional way, using a black pen, or a pencil. He might add colour in Photoshop, but the core of the illustration is hand drawn. His grasp of his tools is impressive, such mastery requires not only talent, but a whole lot offhand work and practice too. </p>
+              <p>Though it may not be clear from the images, Shane primarily draws in the traditional way, using a black pen, or a pencil. He might add colour in Photoshop, but the core of the illustration is hand drawn. His grasp of his tools is impressive, such mastery requires not only talent, but a whole lot offhand work and practice too.</p>
 
-                <p>Shane’s work has graced posters, t-shirts and pages of clients such as Nike, Puma and Vanity Fair. He also consistently works on personal projects. Shane’s personal work adopts a more distinctive style, drawing strong influences from comic books and graphic novels. His style overall is a curious mix of vintage typography, tattoo art and comics, with a bit of Felix the Cat and Popeye of the 20s era thrown in. It’s the unique way that the illustrator has synthesised a range influences that makes his work special.
+                <p>Shane’s work has graced posters, t-shirts and pages of clients such as Nike, Puma and Vanity Fair. He also consistently works on personal projects. Shane’s personal work adopts a more distinctive style, drawing strong influences from comic books and graphic novels. His style overall is a curious mix of vintage typography, tattoo art and comics, with a bit of Felix the Cat and Popeye of the 20s era thrown in. It’s the unique way that the illustrator has merged a range influences that makes his work special.
                 </p>
 
                 <div class="responsive">
@@ -197,9 +197,9 @@
                             </a>
                         </div>
                         <div class="blog-content__next">
-                            <a href="#0" rel="next">
+                            <a href="world_class_business_by_design_part_1.html" rel="next">
                                 <span>Next Post</span>
-                                Less Is More
+                                World Class Business by Design
                             </a>
                         </div>
                     </div>
