--- a/awesome_stippling_art_sketches.html
+++ b/awesome_stippling_art_sketches.html
@@ -206,7 +206,7 @@
 
                     <div class="blog-content__all">
                         <a href="blog.html" class="btn btn--primary">
-                            View All Post
+                            View All Posts
                         </a>
                     </div>
                 </div>
