--- a/d3ntiti-brand-identity-and-strategy-case-study.html
+++ b/d3ntiti-brand-identity-and-strategy-case-study.html
@@ -179,7 +179,7 @@ code {
 
                     <div class="blog-content__all">
                         <a href="blog.html" class="btn btn--primary">
-                            View All Post
+                            View All Posts
                         </a>
                     </div>
                 </div>
