--- a/world_class_business_by_design_part_1.html
+++ b/world_class_business_by_design_part_1.html
@@ -107,7 +107,7 @@
                    It delivers value through channels convenient to the end users and captures value through referrals, goodwill and revenue. <br>
                    A world class business is simply a business that creates and captures value on a global scale.
                 </p>
-                
+
                 <blockquote>
                 <p>The people who need design ingenuity the most, the poorest 90% of the global population, have historically been deprived of it.<br>
                 <cite>Alice Rawsthorn, Design critic.</cite>
@@ -138,7 +138,7 @@
 
                     <div class="blog-content__all">
                         <a href="blog.html" class="btn btn--primary">
-                            View All Post
+                            View All Posts
                         </a>
                     </div>
                 </div>
