added google analytics tag

--- a/blog.html
+++ b/blog.html
@@ -162,15 +162,15 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html">Sept 12, 2017</a>
+                            <a href="blog-single.html">December 4, 2016</a>
                         </div>
-                        <h2 class="h01"><a href="blog-single.html">You Can See Patterns Everywhere.</a></h2>
+                        <h2 class="h01"><a href="my_motives_stench_or_savor.html">My Motives; Stench or Savor.</a></h2>
                         <p>
                         Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh.
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html">Design</a><a href="blog.html">UI</a>
+                            <a href="blog.html">Spiritual</a><a href="blog.html">Personal</a>
                         </div>
                     </article>
 
