--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 <!--<![endif]-->
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84069908-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-84069908-2');
+</script>
+
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
@@ -384,15 +394,15 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Sept 12, 2017</a>
+                            <a href="my_motives_stench_or_savor.html" target="_blank">December 4, 2016</a>
                         </div>
-                        <h2 class="h01"><a href="blog-single.html" target="_blank">Using Patterns in your Branding.</a></h2>
+                        <h2 class="h01"><a href="my_motives_stench_or_savor.html" target="_blank">My Motives; Stench or Savor.</a></h2>
                         <p>
                         Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh.
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html" target="_blank">Design</a><a href="blog.html" target="_blank">Branding</a>
+                            <a href="blog.html" target="_blank">Spiritual</a><a href="blog.html" target="_blank">Personal</a>
                         </div>
                     </article>
                 </div> <!-- end blog-list -->
