--- a/my_motives_stench_or_savor.html
+++ b/my_motives_stench_or_savor.html
@@ -6,12 +6,21 @@
 <!--<![endif]-->
 
 <head>
-  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84069908-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-84069908-2');
+</script>
+
 
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>World class business by design-1 | Dumebi Iwuchukwu</title>
+    <title>My Motives; Stench or Savor | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -67,22 +76,22 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/tvAVMw5.jpg)">
+        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/dum3bi.jpg)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
                     <div class="page-header__info">
                         <div class="page-header__cat">
-                            <a href="#0">Business</a><a href="#0">Strategy</a>
+                            <a href="#0">Spiritual</a><a href="#0">Personal</a>
                         </div>
                     </div>
                     <h1 class="page-header__title">
-                        <a href="#0" title="World Class Business by Design [part 1]">
-                            World Class Business by Design [Part 1]
+                        <a href="#0" title="">
+                            My Motives; Stench or Savor.
                         </a>
                     </h1>
                     <ul class="page-header__meta">
-                        <li class="date">June 21, 2018</li>
+                        <li class="date">December 4, 2016</li>
                         <li class="author">
                             By
                             <span>Dumebi Iwuchukwu</span>
@@ -97,27 +106,33 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
 
-                <p class="lead">Animals are very interesting and exhibit some behaviours that deserve our attention. They migrate, fight, swim, mate, hunt, eat and drink, driven by their instinct to avoid unfavorable stimuli, organize for shelter and reproduce young ones of the species.</p>
+                <p class="lead">You know, I’ve been thinking;
+                Is my offering to God a sweet smelling savor or a foul smelling odor? <br>
+                Do I do things ‘for’ Him to please  myself or ‘with’ Him cos that’s my purpose? <br>
+                Am I obedient or is it just convenient?<br>
+                Am I truly ‘dead’ or do I just love the crowd at the funeral?</p>
 
-                <p>We are different in that though we do these things well, we also have the ability to create. This is a function of the gift of our imagination. With this we are able to create solutions mentally and then physically.
-                </p>
-
-                <p>Before I go further, let me take us to the essence of this article. What is a business? </P>
-               <p>
-                  A business as a system that exists to create, deliver and capture value. It creates value by solving problems, meeting needs and enabling tasks to be accomplished.
-                   It delivers value through channels convenient to the end users and captures value through referrals, goodwill and revenue. <br>
-                   A world class business is simply a business that creates and captures value on a global scale.
-                </p>
-
-                <blockquote>
-                <p>The people who need design ingenuity the most, the poorest 90% of the global population, have historically been deprived of it.<br>
-                <cite>Alice Rawsthorn, Design critic.</cite>
-                </blockquote>
-
-                <p> It might interest you to know that no global brand is an accident or a fluke. They were designed, planned and built.</p>
-
-                <p>In this series we will be exploring the ingredients, principles and strategies required to build a world class business. If you had looked closely at my definition you may have discovered my first ingredient. A world class business creates value, in other words, solves problems.</p>
-
+                <p>You know, I’ve been thinking;
+Is my offering to God a sweet smelling savor or a foul smelling odor?
+Do I do things ‘for’ Him to please  myself or ‘with’ Him cos that’s my purpose?
+Am I obedient or is it just convenient?
+Am I truly ‘dead’ or do I just love the crowd at the funeral?
+Am I proud to rep Him or just proud of the rep that comes with it?
+Am I a responsible son or just an illustrious servant?
+Am I willing to live and to die for Him or am I just glad He lived and died for me.
+I love God but there’s a gap betwix my heart and my hands, betwixt my heart and my head.
+Got so much in my head but so little from my hands. My heart is heavy, my mind is dark.
+Brood, mutter, utter and do. . .that’s what it is to be wise and what it takes to succeed.
+Then why does my brooding seem to be  moody. And my muttering and uttering mostly about the can nots.
+Why are my actions half hearted. . .
+Why am i half expecting failure. . .
+Faith  is not shocked at success but grateful, it ain’t vague expectation but  prompt obedience with assurance of success. .
+Thats what births miracles. .
+Thats what Made Abraham the Shepherd and Patriach, Sarah the Septugarian mom, Lil Joe the dreamer with the colourful coat, Moses the stuttering but mighty Leader, Deborah the Prophet and Judge,  Dave the King, Jerry the Prophet, Ezra the Priest, Nehemiah the Builder, Zerubabbel the  Governor, John the beloved, Paul the Christ Ambassador. . .to mention but a few men that had simple trust on God and lived based on it. . .
+I’m undergoing a metamorphosis and I realize that my fear is like that of the caterpillar in the Chinese proverb. . . What it sees as death, wise men see as a butterfly. . .
+My purpose is revealed a little here, a little there. . .
+I’m not going to be scared no more, i’m just going to place my little hands in God’s and trust Him to lead me there.
+</p>
 
 
 
