--- a/world_class_business_by_design_part_1.html
+++ b/world_class_business_by_design_part_1.html
@@ -6,7 +6,16 @@
 <!--<![endif]-->
 
 <head>
-  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84069908-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-84069908-2');
+</script>
+
 
     <!--- basic page needs
     ================================================== -->
