--- a/my_motives_stench_or_savor.html
+++ b/my_motives_stench_or_savor.html
@@ -112,12 +112,7 @@
                 Am I obedient or is it just convenient?<br>
                 Am I truly ‘dead’ or do I just love the crowd at the funeral?</p>
 
-                <p>You know, I’ve been thinking;
-Is my offering to God a sweet smelling savor or a foul smelling odor?
-Do I do things ‘for’ Him to please  myself or ‘with’ Him cos that’s my purpose?
-Am I obedient or is it just convenient?
-Am I truly ‘dead’ or do I just love the crowd at the funeral?
-Am I proud to rep Him or just proud of the rep that comes with it?
+                <p>Am I proud to rep Him or just proud of the rep that comes with it?
 Am I a responsible son or just an illustrious servant?
 Am I willing to live and to die for Him or am I just glad He lived and died for me.
 I love God but there’s a gap betwix my heart and my hands, betwixt my heart and my head.
