--- a/my_motives_stench_or_savor.html
+++ b/my_motives_stench_or_savor.html
@@ -112,21 +112,21 @@
                 Am I obedient or is it just convenient?<br>
                 Am I truly ‘dead’ or do I just love the crowd at the funeral?</p>
 
-                <p>Am I proud to rep Him or just proud of the rep that comes with it?
-Am I a responsible son or just an illustrious servant?
-Am I willing to live and to die for Him or am I just glad He lived and died for me.
-I love God but there’s a gap betwix my heart and my hands, betwixt my heart and my head.
-Got so much in my head but so little from my hands. My heart is heavy, my mind is dark.
-Brood, mutter, utter and do. . .that’s what it is to be wise and what it takes to succeed.
-Then why does my brooding seem to be  moody. And my muttering and uttering mostly about the can nots.
-Why are my actions half hearted. . .
-Why am i half expecting failure. . .
-Faith  is not shocked at success but grateful, it ain’t vague expectation but  prompt obedience with assurance of success. .
-Thats what births miracles. .
-Thats what Made Abraham the Shepherd and Patriach, Sarah the Septugarian mom, Lil Joe the dreamer with the colourful coat, Moses the stuttering but mighty Leader, Deborah the Prophet and Judge,  Dave the King, Jerry the Prophet, Ezra the Priest, Nehemiah the Builder, Zerubabbel the  Governor, John the beloved, Paul the Christ Ambassador. . .to mention but a few men that had simple trust on God and lived based on it. . .
-I’m undergoing a metamorphosis and I realize that my fear is like that of the caterpillar in the Chinese proverb. . . What it sees as death, wise men see as a butterfly. . .
-My purpose is revealed a little here, a little there. . .
-I’m not going to be scared no more, i’m just going to place my little hands in God’s and trust Him to lead me there.
+                <p>Am I proud to rep Him or just proud of the rep that comes with it?<br>
+Am I a responsible son or just an illustrious servant?<br>
+Am I willing to live and to die for Him or am I just glad He lived and died for me.<br>
+I love God but there’s a gap betwix my heart and my hands, betwixt my heart and my head.<br>
+Got so much in my head but so little from my hands. My heart is heavy, my mind is dark.<br>
+Brood, mutter, utter and do. . .that’s what it is to be wise and what it takes to succeed.<br>
+Then why does my brooding seem to be  moody. And my muttering and uttering mostly about the can nots.<br>
+Why are my actions half hearted. . .<br>
+Why am i half expecting failure. . .<br>
+Faith  is not shocked at success but grateful, it ain’t vague expectation but  prompt obedience with assurance of success. .<br>
+Thats what births miracles. .<br>
+Thats what Made Abraham the Shepherd and Patriach, Sarah the Septugarian mom, Lil Joe the dreamer with the colourful coat, Moses the stuttering but mighty Leader, Deborah the Prophet and Judge,  Dave the King, Jerry the Prophet, Ezra the Priest, Nehemiah the Builder, Zerubabbel the  Governor, John the beloved, Paul the Christ Ambassador. . .to mention but a few men that had simple trust on God and lived based on it. . .<br>
+I’m undergoing a metamorphosis and I realize that my fear is like that of the caterpillar in the Chinese proverb. . . What it sees as death, wise men see as a butterfly. . .<br>
+My purpose is revealed a little here, a little there. . .<br>
+I’m not going to be scared no more, i’m just going to place my little hands in God’s and trust Him to lead me there.<br>
 </p>
 
 
