--- a/blog.html
+++ b/blog.html
@@ -166,7 +166,11 @@
                         </div>
                         <h2 class="h01"><a href="my_motives_stench_or_savor.html">My Motives; Stench or Savor.</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh.
+                          You know, I’ve been thinking;
+                          Is my offering to God a sweet smelling savor or a foul smelling odor? <br>
+                          Do I do things ‘for’ Him to please  myself or ‘with’ Him cos that’s my purpose? <br>
+                          Am I obedient or is it just convenient?<br>
+                          Am I truly ‘dead’ or do I just love the crowd at the funeral?
                         </p>
 
                         <div class="blog-cat">
