--- a/world_class_business_by_design_part_1.html
+++ b/world_class_business_by_design_part_1.html
@@ -133,15 +133,15 @@
                 <div class="blog-content__pagenav">
                     <div class="blog-content__nav">
                         <div class="blog-content__prev">
-                            <a href="#0" rel="prev">
+                            <a href="awesome_stippling_art_sketches.html" rel="prev">
                                 <span>Previous Post</span>
-                                Tips on Minimalist Design
+                                Awesome Stippling Art Sketches.
                             </a>
                         </div>
                         <div class="blog-content__next">
-                            <a href="#0" rel="next">
+                            <a href="my_motives_stench_or_savor.html" rel="next">
                                 <span>Next Post</span>
-                                Less Is More
+                                My Motives; Stench or Savor.
                             </a>
                         </div>
                     </div>
