--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     ================================================== -->
    <meta charset="utf-8">
     <title>Dumebi Iwuchukwu | Art Director, Brand Strategist and Developer - Personal website</title>
-    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
+    <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
     <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -33,17 +33,17 @@
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
-  <meta property="og:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dumebi Iwuchukwu">
-  <meta name="twitter:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
 
   <meta property="og:type" content="website">
 
-  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
     <meta name="author" content="Dumebi Iwuchukwu">
 
          <!-- mobile specific metas
@@ -156,7 +156,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
-                <p class="lead">Art Manager, Brand Strategist &amp; Developer.</p>
+                <p class="lead">Art Director, Brand Strategist &amp; Developer.</p>
             </div>
         </div>
 
