--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84069908-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-84069908-2');
-</script>
+    gtag('config', 'UA-133301768-1');
+  </script>
 
     <!--- basic page needs
     ================================================== -->
@@ -432,7 +432,7 @@
                 <h3>Let's work together</h3>
                 <h1>Contact.</h1>
 
-                <p>I like to listen..</p>
+                <p>I like to listen.</p>
             </div>
         </div>
         <div class="row contact__main">
