--- a/My_YALI_Story.html
+++ b/My_YALI_Story.html
@@ -19,7 +19,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>My Motives; Stench or Savor | Dumebi Iwuchukwu</title>
+    <title>My YALI Story | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
 
@@ -75,25 +75,25 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/dum3bi.jpg)">
+        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/blog-bg-02.jpg)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
                     <div class="page-header__info">
                         <div class="page-header__cat">
-                            <a href="#0">Spiritual</a><a href="#0">Personal</a>
+                            <a href="#0">YALI</a><a href="#0">Training</a>
                         </div>
                     </div>
                     <h1 class="page-header__title">
-                        <a href="#0" title="">
-                            My Motives; Stench or Savor.
+                        <a href="#0" title="My YALI Story.">
+                            My YALI Story.
                         </a>
                     </h1>
                     <ul class="page-header__meta">
-                        <li class="date">December 4, 2016</li>
+                        <li class="date"> April 9, 2018</li>
                         <li class="author">
                             By
-                            <span>Dumebi Iwuchukwu</span>
+                            <span>Jonathan Doe</span>
                         </li>
                     </ul>
 
@@ -105,45 +105,77 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
 
-                <p class="lead">You know, I’ve been thinking;
-                Is my offering to God a sweet smelling savor or a foul smelling odor? <br>
-                Do I do things ‘for’ Him to please  myself or ‘with’ Him cos that’s my purpose? <br>
-                Am I obedient or is it just convenient?<br>
-                Am I truly ‘dead’ or do I just love the crowd at the funeral?</p>
+                <p class="lead">Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint.</p>
 
-                <p>Am I proud to rep Him or just proud of the rep that comes with it?<br>
-                 Am I a responsible son or just an illustrious servant?<br>
-                 Am I willing to live and to die for Him or am I just glad He lived and died for me.
-               </p>
-               <p>
-                 I love God but there’s a gap betwix my heart and my hands, betwixt my heart and my head.<br>
-                 Got so much in my head but so little from my hands. My heart is heavy, my mind is dark.<br>
-                 Brood, mutter, utter and do. . .that’s what it is to be wise and what it takes to succeed.<br>
-                 Then why does my brooding seem to be  moody. And my muttering and uttering mostly about the can nots.<br>
-                 Why are my actions half hearted. . .<br>
-                 Why am i half expecting failure. . .
-              </p>
-              <p>
-                 Faith  is not shocked at success but grateful, it ain’t vague expectation but  prompt obedience with assurance of success. .<br>
-                 Thats what births miracles. .<br>
-               </p>
-               <p>
-                 Thats what Made Abraham the Shepherd and Patriach, Sarah the Septugarian mom, Lil Joe the dreamer with the colourful coat, Moses the stuttering but mighty Leader, Deborah the Prophet and Judge,  Dave the King, Jerry the Prophet, Ezra the Priest, Nehemiah the Builder, Zerubabbel the  Governor, John the beloved, Paul the Christ Ambassador. . .to mention but a few men that had simple trust on God and lived based on it.<br>
-               </p>
-               <p>
-                 I’m undergoing a metamorphosis and I realize that my fear is like that of the caterpillar in the Chinese proverb. . . What it sees as death, wise men see as a butterfly. . .<br>
-                 My purpose is revealed a little here, a little there. . .<br>
-                 I’m not going to be scared no more, i’m just going to place my little hands in God’s and trust Him to lead me there.<br>
-              </p>
+                <p>Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
+                </p>
 
+                <p>
+                <img src="images/wheel-1000.jpg"
+                     srcset="images/wheel-2000.jpg 2000w,
+                        images/wheel-1000.jpg 1000w,
+                        images/wheel-500.jpg 500w"
+                     sizes="(max-width: 2000px) 100vw, 2000px" alt="">
+                </p>
 
+                <h2>Large Heading</h2>
+
+                <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="https://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
+
+                <blockquote><p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another source of some sort, or highlighting text in your post.</p></blockquote>
+
+                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
+
+                <h3>Smaller Heading</h3>
+
+                <p>Dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
+
+<pre><code>
+code {
+    font-size: 1.4rem;
+    margin: 0 .2rem;
+    padding: .2rem .6rem;
+    white-space: nowrap;
+    background: #F1F1F1;
+    border: 1px solid #E1E1E1;
+    border-radius: 3px;
+}
+</code></pre>
+
+                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
+
+                <ul>
+                    <li>Donec nulla non metus auctor fringilla.
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </li>
+                    <li>Donec nulla non metus auctor fringilla.</li>
+                    <li>Donec nulla non metus auctor fringilla.</li>
+                </ul>
+
+                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
+
+                <p class="blog-content__tags">
+                    <span>Post Tags</span>
+
+                    <span class="blog-content__tag-list">
+                        <a href="#0">orci</a>
+                        <a href="#0">lectus</a>
+                        <a href="#0">varius</a>
+                        <a href="#0">turpis</a>
+                    </span>
+
+                </p>
 
                 <div class="blog-content__pagenav">
                     <div class="blog-content__nav">
                         <div class="blog-content__prev">
-                            <a href="world_class_business_by_design_part_1.html" rel="prev">
+                            <a href="#0" rel="prev">
                                 <span>Previous Post</span>
-                                World Class Business by Design [Part 1]
+                                Tips on Minimalist Design
                             </a>
                         </div>
                         <div class="blog-content__next">
