--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu | Art Director, Brand Strategist and Developer - Personal website</title>
+    <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
     <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
     <meta name="theme-color" content="#449cff"/>
 
@@ -593,6 +593,13 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="lazysizes.min.js" async></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+     <script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3584657889118246",
+    enable_page_level_ads: true
+  });
+    </script>
 
 </body>
 
