--- a/blog-single.html
+++ b/blog-single.html
@@ -15,7 +15,7 @@
 
     gtag('config', 'UA-133301768-1');
   </script>
-  
+
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
@@ -262,6 +262,13 @@ code {
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3584657889118246",
+    enable_page_level_ads: true
+  });
+</script>
 
 </body>
 
