--- a/world_class_business_by_design_part_1.html
+++ b/world_class_business_by_design_part_1.html
@@ -222,7 +222,13 @@
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-3584657889118246",
+            enable_page_level_ads: true
+          });
+        </script>
 </body>
 
 </html>
