--- a/My_YALI_Story.html
+++ b/My_YALI_Story.html
@@ -22,6 +22,31 @@
     <title>My YALI Story | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
+    <meta charset="utf-8">
+    <meta name="theme-color" content="#449cff"/>
+   <link rel="canonical" href="https://www.dum3bi.com/My_YALI_Story.html">
+   <meta property="og:site_name" content="Dumebi Iwuchukwu">
+   <meta property="og:locale" content="en_GB">
+   <meta property="article:publisher" content="https://www.facebook.com/iwuchukwu.dumebi">
+   <meta name="twitter:site" content="@dum3bi">
+   <meta name="twitter:creator" content="@dum3bi">
+
+   <meta property="og:url" content="https://www.dum3bi.com/My_YALI_Story.html">
+   <meta property="og:type" content="website">
+   <meta property="og:title" content="the first series in my narration of my experience in Young African Leadership Initiave training held Early 2018 at ASCON Badagry Lagos, Nigeria">
+   <meta property="og:description" content="the first series in my narration of my experience in Young African Leadership Initiave training held Early 2018 at ASCON Badagry Lagos, Nigeria.">
+   <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+   <meta property="og:image:alt" content="Dumebi's logo">
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Dumebi Iwuchukwu">
+   <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+
+   <meta property="og:type" content="website">
+
+   <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+     <meta name="author" content="Dumebi Iwuchukwu">
+
 
     <!-- mobile specific metas
     ================================================== -->
@@ -107,68 +132,14 @@
 
                 <p class="lead">Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint.</p>
 
-                <p>Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
-                </p>
 
-                <p>
-                <img src="images/wheel-1000.jpg"
-                     srcset="images/wheel-2000.jpg 2000w,
-                        images/wheel-1000.jpg 1000w,
-                        images/wheel-500.jpg 500w"
-                     sizes="(max-width: 2000px) 100vw, 2000px" alt="">
-                </p>
-
-                <h2>Large Heading</h2>
-
-                <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="https://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
-
-                <blockquote><p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another source of some sort, or highlighting text in your post.</p></blockquote>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
-
-                <h3>Smaller Heading</h3>
-
-                <p>Dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
-
-<pre><code>
-code {
-    font-size: 1.4rem;
-    margin: 0 .2rem;
-    padding: .2rem .6rem;
-    white-space: nowrap;
-    background: #F1F1F1;
-    border: 1px solid #E1E1E1;
-    border-radius: 3px;
-}
-</code></pre>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
-
-                <ul>
-                    <li>Donec nulla non metus auctor fringilla.
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                        </ul>
-                    </li>
-                    <li>Donec nulla non metus auctor fringilla.</li>
-                    <li>Donec nulla non metus auctor fringilla.</li>
-                </ul>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
-
-                <p class="blog-content__tags">
-                    <span>Post Tags</span>
-
-                    <span class="blog-content__tag-list">
-                        <a href="#0">orci</a>
-                        <a href="#0">lectus</a>
-                        <a href="#0">varius</a>
-                        <a href="#0">turpis</a>
-                    </span>
-
-                </p>
+<p>
+              My Yali Story started with my failed attempt to apply for the 2018 Mandela Washington Fellowship (MWF) because it had closed by the time. Well, I still had the YALI website to peruse and to my delight I came across the online courses. I really felt like I had been given a Vanilla/Chocolate Coldstone® Ice cream freebie when i discovered they were free. I got so addicted I did over seven courses on Design Centered Entrepreneurship [My first date with Design Thinking😉], Servant Leadership [got me feeling like Madiba] and other courses as well. I had visited the Yali Regional Learning Center websites but only saw courses which I had to go to Accra for. As it happened boredom took me there again and voila, a training I could participate in was advertised. I applied, took the administrative test and chose the welfare group [I hoped to help run things and maybe get two meal tickets🤣]. Fast forward to my first congratulatory mail, I was elated and started receiving congratulations like someone that won visa lottery. I was grateful to God though for an opportunity to learn and Network. Then my Oga Joy Charlie created our Whatsapp group, taking our contacts from google+ [double tuale from me]. Started talking with fun folks here like The Gambian Prince, The Nigerian Pilot and the Talkative Bully [you know yourself😋], made me laugh loud spontaneously, at night, on the road, even in the bank🤦🏾‍♂. Couldn’t wait for 24th February to arrive, Well I’m a Lasgidi Prince, so i trekked to the airport in a yellow cab and waited for Yali to pick me up in their Limo. …… .
+             <P>
+            . . .to be continued</p>
+            <p>
+            Taking my Lions for a hunt
+            </p>
 
                 <div class="blog-content__pagenav">
                     <div class="blog-content__nav">
