--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                 <p>I believe in the Zulu philosophy of Ubuntu; I am because we are. This implies we are only truly human when we live for others in our community.</p>
 
-                 <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI to the brands involved.</p>
+                 <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI for the brands involved.</p>
 
                 <p>I am an Art Manager and Resident Instructor (Art Direction) at Oxygen Academy, Lagos Nigeria <br>
                   I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University.</p>
