--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
 
                  <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI for the brands involved.</p>
 
-                <p>I am an Art Manager and Resident Instructor (Art Direction) at Oxygen Academy, Lagos Nigeria <br>
-                  I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University.</p>
+                <p>I am an Art Manager and Resident Instructor (Art Direction) at Oxygen Academy, Lagos Nigeria.<br>
+                  I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University Awka, Nigeria.</p>
 
-                <p>I am driven to restore hope in Africa through capacity building, social entreprises and impact investing .</p>
+                <p>I am driven to restore hope in Africa through capacity building, social entreprises and impact investing.</p>
             </div>
 
             <div class="col-six tab-full right">
